project2/y.output
   0  $accept : Program $end

   1  Program : PROGRAMnum IDnum SEMInum ProgramB

   2  ProgramB : ClassDecl
   3           | ClassDecl ProgramB

   4  ClassDecl : CLASSnum IDnum ClassBody

   5  ClassBody : LBRACEnum ClassBodyB RBRACEnum
   6            | LBRACEnum RBRACEnum
   7            | LBRACEnum ClassBodyC RBRACEnum

   8  ClassBodyB : Decls ClassBodyC
   9             | Decls

  10  ClassBodyC : MethodDecl ClassBodyC
  11             | MethodDecl

  12  Decls : DECLARATIONSnum ENDDECLARATIONSnum
  13        | DECLARATIONSnum DeclsB ENDDECLARATIONSnum

  14  DeclsB : FieldDecl
  15         | DeclsB FieldDecl

  16  FieldDecl : Type FieldDeclB

  17  FieldDeclB : VariableDeclId SEMInum
  18             | VariableDeclId FieldDeclD SEMInum
  19             | VariableDeclId FieldDeclD FieldDeclE

  20  FieldDeclD : EQUALnum VariableInitializer

  21  FieldDeclE : COMMAnum FieldDeclB

  22  VariableDeclId : IDnum VariableDeclIdB
  23                 | IDnum

  24  VariableDeclIdB : LBRACnum RBRACnum
  25                  | VariableDeclIdB LBRACnum RBRACnum

  26  VariableInitializer : Expression
  27                      | ArrayInitializer
  28                      | ArrayCreationExpression

  29  ArrayInitializer : LBRACEnum VariableInitializer RBRACEnum
  30                   | LBRACEnum VariableInitializer ArrayInitializerB RBRACEnum

  31  ArrayInitializerB : COMMAnum VariableInitializer
  32                    | ArrayInitializerB COMMAnum VariableInitializer

  33  ArrayCreationExpression : INTnum ArrayCreationExpressionB

  34  ArrayCreationExpressionB : LBRACnum Expression RBRACnum
  35                           | ArrayCreationExpressionB LBRACnum Expression RBRACnum

  36  MethodDecl : METHODnum Type IDnum LPARENnum RPARENnum Block
  37             | METHODnum VOIDnum IDnum LPARENnum RPARENnum Block
  38             | METHODnum Type IDnum LPARENnum FormalParameterList RPARENnum Block
  39             | METHODnum VOIDnum IDnum LPARENnum FormalParameterList RPARENnum Block

  40  FormalParameterList : FormalParameterListB

  41  FormalParameterListB : VALnum INTnum IDnum FormalParameterListC
  42                       | VALnum INTnum IDnum
  43                       | INTnum IDnum FormalParameterListC
  44                       | INTnum IDnum

  45  FormalParameterListC : COMMAnum IDnum
  46                       | COMMAnum IDnum FormalParameterListC
  47                       | SEMInum FormalParameterListB

  48  Block : Decls StatementList
  49        | StatementList

  50  Type : IDnum TypeB
  51       | INTnum TypeB
  52       | IDnum
  53       | INTnum

  54  TypeB : LBRACnum RBRACnum
  55        | LBRACnum RBRACnum TypeB
  56        | LBRACnum RBRACnum DOTnum Type

  57  StatementList : LBRACEnum Statementsop RBRACEnum

  58  Statementsop : Statement
  59               | Statement SEMInum
  60               | Statement SEMInum Statementsop

  61  Statement : AssignmentStatement
  62            | Statements_Op

  63  Statements_Op : MethodCallStatement
  64                | Statements_Op2

  65  Statements_Op2 : ReturnStatement
  66                 | Statements_Op3

  67  Statements_Op3 : IfStatement
  68                 | Statements_Op4

  69  Statements_Op4 : WhileStatement
  70                 | epsilon

  71  AssignmentStatement : Variable ASSGNnum Expression

  72  MethodCallStatement : Variable LPARENnum RPARENnum
  73                      | Variable LPARENnum Expre RPARENnum

  74  Expre : Expression
  75        | Expre COMMAnum Expression

  76  ReturnStatement : RETURNnum
  77                  | RETURNnum Expression

  78  IfStatement : IFState_Op
  79              | IFState_Op ELSEnum StatementList

  80  IFState_Op : IFnum Expression StatementList
  81             | IFState_Op ELSEnum IFnum Expression StatementList

  82  WhileStatement : WHILEnum Expression StatementList

  83  Expression : SimpleExpression
  84             | SimpleExpression LTnum SimpleExpression
  85             | SimpleExpression GTnum SimpleExpression
  86             | SimpleExpression EQnum SimpleExpression
  87             | SimpleExpression NEnum SimpleExpression
  88             | SimpleExpression LEnum SimpleExpression
  89             | SimpleExpression GEnum SimpleExpression

  90  SimpleExpression : Simple_op2

  91  Simple_op : PLUSnum Term
  92            | MINUSnum Term
  93            | Term

  94  Simple_op2 : Simple_op2 PLUSnum Term
  95             | Simple_op2 MINUSnum Term
  96             | Simple_op2 ORnum Term
  97             | Simple_op

  98  Term : Term_op

  99  Term_op : Term_op TIMESnum Factor
 100          | Term_op DIVIDEnum Factor
 101          | Term_op ANDnum Factor
 102          | Factor

 103  Factor : Factor_op
 104         | LPARENnum Expression RPARENnum
 105         | NOTnum Factor

 106  Factor_op : UnsignedConstant
 107            | Variable
 108            | MethodCallStatement

 109  UnsignedConstant : ICONSTnum
 110                   | SCONSTnum

 111  Variable : IDnum Variable_op

 112  Variable_op : Variable_op2
 113              | epsilon

 114  Variable_op2 : LBRACnum Variable_op3 RBRACnum Variable_op
 115               | DOTnum IDnum Variable_op

 116  Variable_op3 : Expression
 117               | Expression COMMAnum Expression

 118  epsilon :

state 0
	$accept : . Program $end  (0)

	PROGRAMnum  shift 1
	.  error

	Program  goto 2


state 1
	Program : PROGRAMnum . IDnum SEMInum ProgramB  (1)

	IDnum  shift 3
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : PROGRAMnum IDnum . SEMInum ProgramB  (1)

	SEMInum  shift 4
	.  error


state 4
	Program : PROGRAMnum IDnum SEMInum . ProgramB  (1)

	CLASSnum  shift 5
	.  error

	ProgramB  goto 6
	ClassDecl  goto 7


state 5
	ClassDecl : CLASSnum . IDnum ClassBody  (4)

	IDnum  shift 8
	.  error


state 6
	Program : PROGRAMnum IDnum SEMInum ProgramB .  (1)

	.  reduce 1


state 7
	ProgramB : ClassDecl .  (2)
	ProgramB : ClassDecl . ProgramB  (3)

	CLASSnum  shift 5
	$end  reduce 2

	ProgramB  goto 9
	ClassDecl  goto 7


state 8
	ClassDecl : CLASSnum IDnum . ClassBody  (4)

	LBRACEnum  shift 10
	.  error

	ClassBody  goto 11


state 9
	ProgramB : ClassDecl ProgramB .  (3)

	.  reduce 3


state 10
	ClassBody : LBRACEnum . ClassBodyB RBRACEnum  (5)
	ClassBody : LBRACEnum . RBRACEnum  (6)
	ClassBody : LBRACEnum . ClassBodyC RBRACEnum  (7)

	DECLARATIONSnum  shift 12
	METHODnum  shift 13
	RBRACEnum  shift 14
	.  error

	ClassBodyC  goto 15
	ClassBodyB  goto 16
	Decls  goto 17
	MethodDecl  goto 18


state 11
	ClassDecl : CLASSnum IDnum ClassBody .  (4)

	.  reduce 4


state 12
	Decls : DECLARATIONSnum . ENDDECLARATIONSnum  (12)
	Decls : DECLARATIONSnum . DeclsB ENDDECLARATIONSnum  (13)

	ENDDECLARATIONSnum  shift 19
	IDnum  shift 20
	INTnum  shift 21
	.  error

	DeclsB  goto 22
	FieldDecl  goto 23
	Type  goto 24


state 13
	MethodDecl : METHODnum . Type IDnum LPARENnum RPARENnum Block  (36)
	MethodDecl : METHODnum . VOIDnum IDnum LPARENnum RPARENnum Block  (37)
	MethodDecl : METHODnum . Type IDnum LPARENnum FormalParameterList RPARENnum Block  (38)
	MethodDecl : METHODnum . VOIDnum IDnum LPARENnum FormalParameterList RPARENnum Block  (39)

	IDnum  shift 20
	INTnum  shift 21
	VOIDnum  shift 25
	.  error

	Type  goto 26


state 14
	ClassBody : LBRACEnum RBRACEnum .  (6)

	.  reduce 6


state 15
	ClassBody : LBRACEnum ClassBodyC . RBRACEnum  (7)

	RBRACEnum  shift 27
	.  error


state 16
	ClassBody : LBRACEnum ClassBodyB . RBRACEnum  (5)

	RBRACEnum  shift 28
	.  error


state 17
	ClassBodyB : Decls . ClassBodyC  (8)
	ClassBodyB : Decls .  (9)

	METHODnum  shift 13
	RBRACEnum  reduce 9

	ClassBodyC  goto 29
	MethodDecl  goto 18


state 18
	ClassBodyC : MethodDecl . ClassBodyC  (10)
	ClassBodyC : MethodDecl .  (11)

	METHODnum  shift 13
	RBRACEnum  reduce 11

	ClassBodyC  goto 30
	MethodDecl  goto 18


state 19
	Decls : DECLARATIONSnum ENDDECLARATIONSnum .  (12)

	.  reduce 12


state 20
	Type : IDnum . TypeB  (50)
	Type : IDnum .  (52)

	LBRACnum  shift 31
	IDnum  reduce 52

	TypeB  goto 32


state 21
	Type : INTnum . TypeB  (51)
	Type : INTnum .  (53)

	LBRACnum  shift 31
	IDnum  reduce 53

	TypeB  goto 33


state 22
	Decls : DECLARATIONSnum DeclsB . ENDDECLARATIONSnum  (13)
	DeclsB : DeclsB . FieldDecl  (15)

	ENDDECLARATIONSnum  shift 34
	IDnum  shift 20
	INTnum  shift 21
	.  error

	FieldDecl  goto 35
	Type  goto 24


state 23
	DeclsB : FieldDecl .  (14)

	.  reduce 14


state 24
	FieldDecl : Type . FieldDeclB  (16)

	IDnum  shift 36
	.  error

	FieldDeclB  goto 37
	VariableDeclId  goto 38


state 25
	MethodDecl : METHODnum VOIDnum . IDnum LPARENnum RPARENnum Block  (37)
	MethodDecl : METHODnum VOIDnum . IDnum LPARENnum FormalParameterList RPARENnum Block  (39)

	IDnum  shift 39
	.  error


state 26
	MethodDecl : METHODnum Type . IDnum LPARENnum RPARENnum Block  (36)
	MethodDecl : METHODnum Type . IDnum LPARENnum FormalParameterList RPARENnum Block  (38)

	IDnum  shift 40
	.  error


state 27
	ClassBody : LBRACEnum ClassBodyC RBRACEnum .  (7)

	.  reduce 7


state 28
	ClassBody : LBRACEnum ClassBodyB RBRACEnum .  (5)

	.  reduce 5


state 29
	ClassBodyB : Decls ClassBodyC .  (8)

	.  reduce 8


state 30
	ClassBodyC : MethodDecl ClassBodyC .  (10)

	.  reduce 10


state 31
	TypeB : LBRACnum . RBRACnum  (54)
	TypeB : LBRACnum . RBRACnum TypeB  (55)
	TypeB : LBRACnum . RBRACnum DOTnum Type  (56)

	RBRACnum  shift 41
	.  error


state 32
	Type : IDnum TypeB .  (50)

	.  reduce 50


state 33
	Type : INTnum TypeB .  (51)

	.  reduce 51


state 34
	Decls : DECLARATIONSnum DeclsB ENDDECLARATIONSnum .  (13)

	.  reduce 13


state 35
	DeclsB : DeclsB FieldDecl .  (15)

	.  reduce 15


state 36
	VariableDeclId : IDnum . VariableDeclIdB  (22)
	VariableDeclId : IDnum .  (23)

	LBRACnum  shift 42
	EQUALnum  reduce 23
	SEMInum  reduce 23

	VariableDeclIdB  goto 43


state 37
	FieldDecl : Type FieldDeclB .  (16)

	.  reduce 16


state 38
	FieldDeclB : VariableDeclId . SEMInum  (17)
	FieldDeclB : VariableDeclId . FieldDeclD SEMInum  (18)
	FieldDeclB : VariableDeclId . FieldDeclD FieldDeclE  (19)

	EQUALnum  shift 44
	SEMInum  shift 45
	.  error

	FieldDeclD  goto 46


state 39
	MethodDecl : METHODnum VOIDnum IDnum . LPARENnum RPARENnum Block  (37)
	MethodDecl : METHODnum VOIDnum IDnum . LPARENnum FormalParameterList RPARENnum Block  (39)

	LPARENnum  shift 47
	.  error


state 40
	MethodDecl : METHODnum Type IDnum . LPARENnum RPARENnum Block  (36)
	MethodDecl : METHODnum Type IDnum . LPARENnum FormalParameterList RPARENnum Block  (38)

	LPARENnum  shift 48
	.  error


state 41
	TypeB : LBRACnum RBRACnum .  (54)
	TypeB : LBRACnum RBRACnum . TypeB  (55)
	TypeB : LBRACnum RBRACnum . DOTnum Type  (56)

	DOTnum  shift 49
	LBRACnum  shift 31
	IDnum  reduce 54

	TypeB  goto 50


state 42
	VariableDeclIdB : LBRACnum . RBRACnum  (24)

	RBRACnum  shift 51
	.  error


state 43
	VariableDeclId : IDnum VariableDeclIdB .  (22)
	VariableDeclIdB : VariableDeclIdB . LBRACnum RBRACnum  (25)

	LBRACnum  shift 52
	EQUALnum  reduce 22
	SEMInum  reduce 22


state 44
	FieldDeclD : EQUALnum . VariableInitializer  (20)

	IDnum  shift 53
	INTnum  shift 54
	LPARENnum  shift 55
	ICONSTnum  shift 56
	LBRACEnum  shift 57
	MINUSnum  shift 58
	NOTnum  shift 59
	PLUSnum  shift 60
	SCONSTnum  shift 61
	.  error
